--- a/app/public/modules/tasks/less/taskList.less
+++ b/app/public/modules/tasks/less/taskList.less
@@ -60,17 +60,30 @@ ol, ul, li {
 			color: #fff;
 			margin: 0 15px;
 			vertical-align: middle;
+
+				&.tasks-priority1 {
+					color: #ed5565;
+				}
+				&.tasks-priority2 {
+					color: #f3a747;
+				}
+				&.tasks-priority3 {
+					color: #61b394;
+				}
+				&.tasks-priority4 {
+					color: #676a6c;
+				}
 		}
 
 		.tasks-item-percent {
 			display: inline-block;
 			vertical-align: middle;
 			font-size: 1em;
-			background-color: #bf2004;
+			background-color: #eee;
 			width:40px;
 			text-align: center;
 			border-radius: 5px;
-			color: #fff;
+			color: #333;
 		}
 
 		.tasks-list-item-title {
