revert core style changes

--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -184,4 +184,14 @@ div.ui-notification {
 	&.success {
 		background: #1ab394;
 	}
+
+	.message {
+		background-color: transparent;
+		border: none;
+		text-align: left;
+		display: block;
+		padding: 0;
+		position: relative;
+		border-radius: 0;
+	}
 }
