EPMKHRDMH-68 Add task

--- a/app/public/modules/tasks/less/createTask.less
+++ b/app/public/modules/tasks/less/createTask.less
@@ -6,8 +6,13 @@
 	margin: 5px 10px -40px;
 	padding: 10px 25px;
 
+	.error {
+		color: red;
+		margin-top: 3px;
+	}
+
 	.col-xs-6 {
-		min-height: 300px;
+		min-height: 330px;
 		position: relative;
 	}
 
@@ -94,8 +99,7 @@
 			visibility: hidden;
 		}
 		.tasks-priority {
-			padding-bottom: 30px;
-			padding-right: 10px;
+			padding:4px 10px 25px;
 			float:left;
 			font-size: 2em;
 		}
