--- a/app/public/modules/core/views/home.client.view.html
+++ b/app/public/modules/core/views/home.client.view.html
@@ -10,6 +10,7 @@
 
 		<div class="content" data-ng-controller="HomeController">
 			<h1>Welcome page</h1>
+			<div ng-include="'/modules/calendar/views/calendar.client.view.html'"></div>
 		</div>
 	</div>
 </section>
