Added calendar to 'Create task/event' page

--- a/app/public/modules/tasks/less/createTask.less
+++ b/app/public/modules/tasks/less/createTask.less
@@ -3,9 +3,8 @@
 .create-task-wrapper{
 	background: #eee;
 	border: 1px solid #c6c6c6;
-	margin: 5px 10px -40px;
 	padding: 10px 25px;
-
+	margin-bottom: 45px;
 	.error {
 		color: red;
 		margin-top: 3px;
