--- a/app/public/modules/calendar/views/calendar.client.view.html
+++ b/app/public/modules/calendar/views/calendar.client.view.html
@@ -1,4 +1,4 @@
-<div class="row white-bg wrapper wrapper-content" data-ng-controller="CalendarController">
+<div class="calendar-wrapper" data-ng-controller="CalendarController">
 	<div class="row">
 		<div class="col-lg-12">
 			<div ui-calendar="uiConfig.calendar" class="calendar" ng-model="eventSources"></div>
