--- a/app/public/modules/core/views/home.client.view.html
+++ b/app/public/modules/core/views/home.client.view.html
@@ -1,4 +1,4 @@
 <div  data-ng-controller="HomeController">
-	<h1>Home page</h1>
+	<h1 class="page-heading">Home page</h1>
 	<div ng-include="'/modules/calendar/views/calendar.client.view.html'"></div>
 </div>
