--- a/app/public/modules/users/views/settings/edit-profile.client.view.html
+++ b/app/public/modules/users/views/settings/edit-profile.client.view.html
@@ -1,83 +1,228 @@
-<section class="row" data-ng-controller="ChangeProfilePictureController as profilePicture">
-	<div class="col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-4">
-		<form class="signin form-horizontal">
-			<fieldset>
-				<div class="form-group text-center">
-					<img ng-src="{{profilePicture.imageURL}}" alt="{{profilePicture.user.displayName}}" class="img-thumbnail user-profile-picture">
-				</div>
+<div class="settings-wrapper">
+	<div class="settings-background"></div>
+	<div class="container">
+		<div class="row">
+			<h1 class="col-md-12 text-center">Edit your profile</h1>
+			<section class="col-md-3">
+				<form class="signin form-horizontal">
+					<fieldset>
+						<div class="form-group text-center">
+							<img ng-src="{{settings.imageURL}}" alt="{{settings.user.displayName}}" class="img-thumbnail user-profile-picture">
+						</div>
 
-				<div class="text-center form-group" ng-hide="profilePicture.uploader.queue.length">
-				  <span class="btn btn-default btn-file">
-					  Select Image <input type="file" nv-file-select uploader="profilePicture.uploader">
-				  </span>
-				</div>
+						<div class="text-center form-group" ng-hide="settings.uploader.queue.length">
+						  <span class="btn btn-default btn-file">
+							  Select Image <input type="file" nv-file-select uploader="settings.uploader">
+						  </span>
+						</div>
 
-				<div class="text-center form-group" ng-show="profilePicture.uploader.queue.length">
-					<button class="btn btn-primary" ng-click="profilePicture.uploadProfilePicture();">Upload</button>
-					<button class="btn btn-default" ng-click="profilePicture.cancelUpload();">Cancel</button>
-				</div>
+						<div class="text-center form-group" ng-show="settings.uploader.queue.length">
+							<button class="btn btn-primary" ng-click="settings.uploadProfilePicture();">Upload</button>
+							<button class="btn btn-default" ng-click="settings.cancelUpload();">Cancel</button>
+						</div>
+					</fieldset>
+				</form>
+			</section>
 
-				<div ng-show="profilePicture.success" class="text-center text-success">
-					<strong>Profile Picture Changed Successfully</strong>
-				</div>
+			<section class="col-md-7 col-md-offset-2">
+				<form name="userForm" data-ng-submit="settings.updateUserProfile(userForm.$valid)" class="signin form-horizontal"
+					  autocomplete="off" novalidate
+				>
+					<fieldset>
+						<div class="form-group">
+							<label for="email" class="col-sm-4 control-label">Email</label>
+							<div class="col-sm-8">
+								<input type="email" id="email" name="email" class="form-control" placeholder="Email"
+									   data-ng-model="settings.user.email" ng-model-options="{ debounce: 400}"
+									   required
+								>
+								<div ng-show="userForm.submitted || userForm.email.$dirty" class="error-message">
+									<p ng-show="userForm.email.$error.required" class="help-block error-text">Please enter your email</p>
+									<p ng-show="userForm.email.$error.email" class="help-block error-text">Please enter a valid email</p>
+								</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="username" class="col-sm-4 control-label">Username</label>
+							<div class="col-sm-8">
+								<input type="text" id="username" name="username" class="form-control" placeholder="Username"
+									   data-ng-model="settings.user.username" ng-model-options="{ debounce: 400}"
+									   required
+								>
+								<div ng-show="userForm.submitted || userForm.username.$dirty" class="error-message">
+									<p ng-show="userForm.username.$error.required" class="help-block error-text">Please enter your username</p>
+								</div>
+							</div>
+						</div>
+					</fieldset>
 
-				<div ng-show="profilePicture.error" class="text-center text-danger">
-					<strong ng-bind="profilePicture.error"></strong>
-				</div>
-			</fieldset>
-		</form>
+					<fieldset>
+						<div class="form-group">
+							<label for="currentPassword" class="col-sm-4 control-label">Current Password</label>
+							<div class="col-sm-8">
+								<input type="password" id="currentPassword" name="currentPassword" class="form-control"
+									   placeholder="Current Password" data-ng-model="settings.user.currentPassword"
+								>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="newPassword" class="col-sm-4 control-label">New Password</label>
+							<div class="col-sm-8">
+								<input type="password" id="newPassword" name="newPassword" class="form-control"
+									   placeholder="New Password" data-ng-model="settings.user.newPassword"
+								>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="verifyPassword" class="col-sm-4 control-label">Verify Password</label>
+							<div class="col-sm-8">
+								<input type="password" id="verifyPassword" name="verifyPassword" class="form-control"
+									   placeholder="Verify Password" data-ng-model="settings.user.verifyPassword"
+								>
+							</div>
+						</div>
+					</fieldset>
+
+					<fieldset>
+						<div class="form-group">
+							<div class="col-sm-4">
+								<label for="add-new-booked-slot" class="control-label">Don't disturb me</label>
+								<button id="add-new-booked-slot" type="button" class="btn btn-default pull-right"
+										aria-label="Left Align" ng-click="settings.addNewBookedSlot()"
+								>
+									<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+								</button>
+							</div>
+
+							<div class="col-sm-8">
+								<div class="form-group" ng-repeat="(i, booked) in settings.user.predefinedSettings.booked">
+									<ng-form name="bookedTime">
+										<div class="col-sm-5">
+											<div class="row">
+												<label for="booked-start-time-{{$index}}" class="col-sm-4 control-label">From: </label>
+												<div class="col-sm-8">
+													<input id="booked-start-time-{{$index}}" type="time" class="form-control"
+														   required name="startTime"
+														   data-ng-model="booked.startTime" ng-model-options="{ updateOn: 'blur' }"
+													>
+												</div>
+											</div>
+
+											<div ng-show="userForm.submitted || bookedTime.startTime.$dirty" class="error-message">
+												<p ng-show="bookedTime.startTime.$error.required" class="help-block error-text">Please enter start time</p>
+											</div>
+										</div>
+
+										<div class="col-sm-5">
+											<div class="row">
+												<label for="booked-end-time{{$index}}" class="col-sm-4 control-label">To: </label>
+												<div class="col-sm-8">
+													<input id="booked-end-time{{$index}}" type="time" class="form-control"
+														   required name="endTime"
+														   data-ng-model="booked.endTime" ng-model-options="{ updateOn: 'blur' }"
+													>
+												</div>
+											</div>
+
+											<div ng-show="userForm.submitted || bookedTime.endTime.$dirty" class="error-message">
+												<p ng-show="bookedTime.endTime.$error.required" class="help-block error-text">Please enter end time</p>
+											</div>
+										</div>
+
+										<div class="col-sm-2 text-right">
+											<button type="button" class="btn btn-default" aria-label="Left Align" data-ng-click="settings.removeBookedSlot(i)">
+												<span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+											</button>
+										</div>
+									</ng-form>
+								</div>
+							</div>
+						</div>
+					</fieldset>
+
+					<fieldset>
+						<div class="form-group">
+							<label for="reminder" class="col-sm-4 control-label">Reminder: </label>
+							<div class="col-sm-2">
+								<input id="reminder" type="number" class="form-control" name="reminder" required
+									   data-ng-model="settings.user.predefinedSettings.reminder" ng-model-options="{ updateOn: 'blur' }"
+								>
+							</div>
+							<div class="col-sm-offset-6">
+								<div ng-show="userForm.submitted || userForm.reminder.$dirty" class="error-message">
+									<p ng-show="userForm.reminder.$error.required" class="help-block error-text">Please enter reminder time</p>
+								</div>
+							</div>
+						</div>
+					</fieldset>
+
+					<fieldset>
+						<div class="form-group">
+							<label class="col-sm-4 control-label">Working time</label>
+
+							<div class="col-sm-8 working-days">
+								<div class="form-group" ng-repeat="dayName in settings.workingDays" ng-init="dayOpts = settings.user.predefinedSettings.workingHours[dayName]">
+									<ng-form name="workingDay">
+										<div class="col-sm-1">
+											<input type="checkbox" data-ng-model="dayOpts.isWorkingDay" data-ng-checked="dayOpts.isWorkingDay">
+										</div>
+
+										<h3 class="col-sm-1">
+											{{dayName}}
+										</h3>
+
+										<div class="col-sm-5 working-from-wrapper">
+											<div class="row">
+												<label for="working-day-start-{{$index}}" class="col-sm-4 control-label">From: </label>
+												<div class="col-sm-8">
+													<input id="working-day-start-{{$index}}" type="time" class="form-control" name="workingDayStart"
+														   data-ng-model="dayOpts.start" data-ng-disabled="!dayOpts.isWorkingDay"
+														   ng-model-options="{ updateOn: 'blur' }"
+														   required
+													>
+												</div>
+											</div>
+
+											<div ng-show="userForm.submitted || workingDay.workingDayStart.$dirty" class="error-message">
+												<p ng-show="workingDay.workingDayStart.$error.required" class="help-block error-text">Please enter start time</p>
+											</div>
+										</div>
+
+										<div class="col-sm-5">
+											<div class="row">
+												<label for="working-day-end-{{$index}}" class="col-sm-4 control-label">To: </label>
+												<div class="col-sm-8">
+													<input id="working-day-end-{{$index}}" type="time" class="form-control" name="workingDayEnd"
+														   data-ng-model="dayOpts.end" data-ng-disabled="!dayOpts.isWorkingDay"
+														   ng-model-options="{ updateOn: 'blur' }"
+														   required
+													>
+												</div>
+											</div>
+
+											<div ng-show="userForm.submitted || workingDay.workingDayEnd.$dirty" class="error-message">
+												<p ng-show="workingDay.workingDayEnd.$error.required" class="help-block error-text">Please enter end time</p>
+											</div>
+										</div>
+									</ng-form>
+								</div>
+							</div>
+						</div>
+					</fieldset>
+
+					<fieldset>
+						<div class="text-right">
+							<button type="submit" class="btn btn-large btn-primary">Save Profile</button>
+						</div>
+						<div data-ng-show="settings.success" class="text-center text-success">
+							<strong>Profile Saved Successfully</strong>
+						</div>
+						<div data-ng-show="settings.error" class="text-center text-danger">
+							<strong data-ng-bind="settings.error"></strong>
+						</div>
+					</fieldset>
+				</form>
+			</section>
+		</div>
 	</div>
-</section>
-
-<section class="row" data-ng-controller="SettingsController">
-	<h3 class="col-md-12 text-center">Edit your profile</h3>
-	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
-		<form name="userForm" data-ng-submit="updateUserProfile(userForm.$valid)" class="signin form-horizontal" autocomplete="off">
-			<fieldset>
-				<div class="form-group">
-					<label for="firstName">First Name</label>
-					<input type="text" id="firstName" name="firstName" class="form-control" data-ng-model="user.firstName" placeholder="First Name">
-				</div>
-				<div class="form-group">
-					<label for="lastName">Last Name</label>
-					<input type="text" id="lastName" name="lastName" class="form-control" data-ng-model="user.lastName" placeholder="Last Name">
-				</div>
-				<div class="form-group">
-					<label for="email">Email</label>
-					<input type="email" id="email" name="email" class="form-control" data-ng-model="user.email" placeholder="Email">
-				</div>
-				<div class="form-group">
-					<label for="username">Username</label>
-					<input type="text" id="username" name="username" class="form-control" data-ng-model="user.username" placeholder="Username">
-				</div>
-			</fieldset>
-
-			<fieldset>
-				<div class="form-group">
-					<label for="currentPassword">Current Password</label>
-					<input type="password" id="currentPassword" name="currentPassword" class="form-control" data-ng-model="user.currentPassword" placeholder="Current Password">
-				</div>
-				<div class="form-group">
-					<label for="newPassword">New Password</label>
-					<input type="password" id="newPassword" name="newPassword" class="form-control" data-ng-model="user.newPassword" placeholder="New Password">
-				</div>
-				<div class="form-group">
-					<label for="verifyPassword">Verify Password</label>
-					<input type="password" id="verifyPassword" name="verifyPassword" class="form-control" data-ng-model="user.verifyPassword" placeholder="Verify Password">
-				</div>
-			</fieldset>
-
-			<fieldset>
-				<div class="text-center form-group">
-					<button type="submit" class="btn btn-large btn-primary">Save Profile</button>
-				</div>
-				<div data-ng-show="success" class="text-center text-success">
-					<strong>Profile Saved Successfully</strong>
-				</div>
-				<div data-ng-show="error" class="text-center text-danger">
-					<strong data-ng-bind="error"></strong>
-				</div>
-			</fieldset>
-		</form>
-	</div>
-</section>
+</div>
