--- a/app/public/modules/core/less/variables.less
+++ b/app/public/modules/core/less/variables.less
@@ -5,6 +5,9 @@
 
 @light-text: #fff;
 @link-color: #1c84c6;
+@border-color: #D6D6D6;
+@main-bg-color: #F5F5F5;
+@error-message-color: #a94442;
 
 
 /* Variables for authorization pages */
