--- a/app/public/modules/core/views/header.client.view.html
+++ b/app/public/modules/core/views/header.client.view.html
@@ -18,6 +18,7 @@
 						<span class="caret"></span></a>
 					<ul class="dropdown-menu">
 						<li><a href="#!/settings/profile">Settings</a></li>
+						<li><a href="#!/templates">My templates</a></li>
 						<li><a href="/auth/signout">Logout</a></li>
 					</ul>
 				</div>
