--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -77,7 +77,7 @@ a {
 		overflow: hidden;
 		position: relative;
 
-		header {
+		.navbar-default {
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -97,7 +97,7 @@ a {
 			left: 0;
 			right: 0;
 			overflow: auto;
-			background: #fff;
+			background: @main-bg-color;
 		}
 	}
 }
@@ -193,5 +193,11 @@ div.ui-notification {
 		padding: 0;
 		position: relative;
 		border-radius: 0;
+	}
+}
+
+.error-message {
+	.error-text {
+		color: @error-message-color;
 	}
 }
