--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -34,37 +34,36 @@
 									<h5><b>Priority*</b></h5>
 									<div class="priority-btn-inner clearfix">
 										<div class="priority-btn-row">
-											<div class="priority-btn-cell borderRightBottom" ng-class="{active: priority == 1}">
+											<div class="priority-btn-cell borderRightBottom" ng-class="{active: taskConfig.priority == 1}">
 												<label class="radio-inline tasks-priority1">
 													<span class="glyphicon glyphicon-star tasks-priority"></span>
-													<input type="radio"  name="priority" data-ng-model="priority" value="1" required>Urgent and Important
+													<input type="radio"  name="priority" ng-model="taskConfig.priority" value="1" required>Urgent and Important
 												</label>
 											</div>
-											<div class="priority-btn-cell" ng-class="{active: priority == 2}">
+											<div class="priority-btn-cell" ng-class="{active: taskConfig.priority == 2}">
 												<label class="radio-inline tasks-priority2">
 													<span class="glyphicon glyphicon-star tasks-priority"></span>
-													<input type="radio" name="priority" data-ng-model="priority" value="2" required>Important not Urgent
+													<input type="radio" name="priority" data-ng-model="taskConfig.priority" value="2" required>Important not Urgent
 												</label>
 											</div>
 										</div>
 										<div class="priority-btn-row">
-											<div class="priority-btn-cell" ng-class="{active: priority == 3}">
+											<div class="priority-btn-cell" ng-class="{active: taskConfig.priority == 3}">
 												<label class="radio-inline tasks-priority3">
 													<span class="glyphicon glyphicon-star tasks-priority"></span>
-													<input type="radio"  name="priority" data-ng-model="priority" value="3" required>Urgent not Important
-
+													<input type="radio"  name="priority" ng-model="taskConfig.priority" value="3" required>Urgent not Important
 												</label>
 											</div>
-											<div class="priority-btn-cell borderLeftTop" ng-class="{active: priority == 4}">
+											<div class="priority-btn-cell borderLeftTop" ng-class="{active: taskConfig.priority == 4}">
 												<label class="radio-inline tasks-priority4">
 													<span class="glyphicon glyphicon-star tasks-priority"></span>
-													<input type="radio" name="priority" data-ng-model="priority" value="4" required>Not Important not urgent
+													<input type="radio" name="priority" data-ng-model="taskConfig.priority" value="4" required>Not Important not urgent
 												</label>
 											</div>
 										</div>
 									</div>
 									<div ng-show="validationError.priority" class="error">
-									!	{{validationError.priority.message}}
+									{{validationError.priority.message}}
 									</div>
 								</div>
 							</div>
@@ -96,7 +95,7 @@
 									</span>
 
 									<input id="endDate" data-ng-disabled="withOutDate" type="text" class="form-control input-round-borders calendar-input" datepicker-popup="dd.MM.yyyy"
-										   ng-model="dt.endDate" is-open="opened.endDate" min-date="endDate.minDate" max-date="endDate.maxDate"
+										   ng-model="date.endDate" is-open="opened.endDate" min-date="endDate.minDate" max-date="endDate.maxDate"
 										   datepicker-options="dateOptions.endDate" date-disabled="disabled(date, mode)"
 										   close-text="Close"
 										   ng-click="openEnd($event)" required/>
@@ -171,20 +170,6 @@
 						</div>
 					</div>
 				</div>
-
-
-				<!-- <div class="form-group">
-                     <label class="control-label" for="name">Name</label>
-                     <div class="controls">
-                         <input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
-                     </div>
-                 </div>
-                 <div class="form-group">
-                     <input type="submit" class="btn btn-default">
-                 </div>-->
-				<!--<div data-ng-show="error" class="text-danger">
-					<strong data-ng-bind="error"></strong>
-				</div>-->
 			</fieldset>
 		</form>
 	</div>
