--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -34,7 +34,7 @@
 										<span ng-show="priority == '3'" class="glyphicon tasks-priority3 glyphicon-star tasks-priority ng-hide"></span>
 										<span ng-show="priority == '4'" class="glyphicon tasks-priority4 glyphicon-star tasks-priority ng-hide"></span>
 									</span>
-									<select name="priority" data-ng-model="priority" ng-init="priority='1'">
+									<select name="priority" data-ng-model="newTask.priority" ng-init="priority='1'">
 										<option value="1">Urgent and Important</option>
 										<option value="2">Important not Urgent</option>
 										<option value="3">Urgent not Important</option>
@@ -48,14 +48,14 @@
 							<div class="form-group">
 								<div class="checkbox isTemplateChecker">
 									<label for="saveAsDraft">
-										<input type="checkbox" data-ng-model="saveAsDraft" id="saveAsDraft">Save as template
+										<input type="checkbox" data-ng-model="newTask.saveAsDraft" id="saveAsDraft">Save as template
 									</label>
 								</div>
 							</div>
 							<div class="form-group">
 								<div class="checkbox">
 									<label for="withOutDate">
-										<input type="checkbox" data-ng-model="withOutDate" id="withOutDate">Task without date
+										<input type="checkbox" data-ng-model="newTask.withOutDate" id="withOutDate">Task without date
 									</label>
 								</div>
 							</div>
@@ -64,7 +64,7 @@
 					<div class="col-xs-6 col-sm-3">
 						<div class="column-wrapper">
 							<div class="form-group form-group-time-select">
-								<label class="control-label label-padding" for="srartDate">Start date</label>
+								<label class="control-label label-padding">Start date</label>
 								<div class="input-group ui-datepicker">
 									<span ng-class="{disabled: newTask.withOutDate}"
 										   class="input-group-addon calendar-btn" ng-click="openStart($event)">
@@ -77,7 +77,7 @@
 										   close-text="Close"
 										   ng-click="openStart($event)" required/>
 								</div>
-								<timepicker class="select-time" ng-model="startTime" minute-step="15" show-meridian="true"></timepicker>
+								<timepicker class="select-time" ng-model="newTask.startTime" minute-step="15" show-meridian="true"></timepicker>
 							</div>
 							<br>
 							<div class="form-group form-group-time-select">
@@ -94,7 +94,7 @@
 										   close-text="Close"
 										   ng-click="openEnd($event)" required/>
 								</div>
-								<timepicker class="select-time" ng-model="endTime" minute-step="15" show-meridian="true"></timepicker>
+								<timepicker class="select-time" ng-model="newTask.endTime" minute-step="15" show-meridian="true"></timepicker>
 							</div>
 							<div class="form-group">
 								<label class="control-label">Estimation (hours)</label>
