--- a/app/public/modules/events/views/edit-event.client.view.html
+++ b/app/public/modules/events/views/edit-event.client.view.html
@@ -1,4 +1,4 @@
-<section class="create-event-wrapper clearfix" data-ng-controller="EventsController">
+<section class="create-event-wrapper clearfix" data-ng-controller="EventsController" data-ng-init="findEvent()">
 	<div class="col-md-12">
 		<form novalidate>
 			<fieldset class="row">
@@ -6,21 +6,18 @@
 					<div class="column-wrapper col-xs-6 col-sm-4">
 						<div class="form-group">
 							<label for="title">Title*</label>
-							<input type="text" data-ng-model="eventData.title" id="title" class="form-control input-round-borders" placeholder="Title"/>
-							<div ng-show="eventData.validationError" class="error-text">
-								{{eventData.validationError.message}}
-							</div>
+							<input type="text" data-ng-model="event.title" id="title" class="form-control input-round-borders" placeholder="Title"/>
 						</div>
 						<div class="form-group checkbox">
 							<label for="saveAsTemplate">
-								<input type="checkbox" data-ng-model="eventData.isATemplate" id="saveAsTemplate"/>
+								<input type="checkbox" data-ng-model="event.isATemplate" id="saveAsTemplate"/>
 								Save as a new template
 							</label>
 						</div>
 						<div class="form-group">
 							<div class="checkbox">
 								<label for="withoutDates">
-									<input type="checkbox" data-ng-model="eventData.withoutDates" id="withoutDates"/>
+									<input type="checkbox" data-ng-model="event.withoutDates" id="withoutDates"/>
 									Event without dates
 								</label>
 							</div>
@@ -30,32 +27,33 @@
 						<div class="form-group">
 							<label class="control-label label-padding" for="startDate">Start date</label>
 							<div class="input-group ui-datepicker">
-								<span ng-class="{disabled: eventData.withoutDates}" class="input-group-addon calendar-btn" ng-click="openDatepicker($event, 'startDate')">
+								<span ng-class="{disabled: event.withoutDates}" class="input-group-addon calendar-btn" ng-click="openDatepicker($event, 'startDate')">
 									<i class="fa fa-calendar"></i>
 								</span>
-								<input id="startDate" data-ng-disabled="eventData.withoutDates" type="text" class="form-control input-round-borders calendar-input" datepicker-popup="dd.MM.yyyy" ng-model="eventData.startDate" is-open="datepicker.startDate.isOpened" min-date="datepicker.currentDate" datepicker-options="datepicker.options" date-disabled="disabled(date, mode)"  close-text="Close" ng-click="openDatepicker($event, 'startDate')" required/>
+								<input id="startDate" data-ng-disabled="event.withoutDates" type="text" class="form-control input-round-borders calendar-input" datepicker-popup="dd.MM.yyyy" ng-model="event.days.startTime" is-open="datepicker.startDate.isOpened" min-date="datepicker.currentDate" datepicker-options="datepicker.options" date-disabled="disabled(date, mode)"  close-text="Close" ng-click="openDatepicker($event, 'startDate')" required/>
 							</div>
 						</div>
 						<div class="form-group">
 							<label for="endDate">End date</label>
 							<div class="input-group ui-datepicker">
-								<span ng-class="{disabled: eventData.withoutDates}" class="input-group-addon calendar-btn" ng-click="openDatepicker($event, 'endDate')">
+								<span ng-class="{disabled: event.withoutDates}" class="input-group-addon calendar-btn" ng-click="openDatepicker($event, 'endDate')">
 									<i class="fa fa-calendar"></i>
 								</span>
-								<input id="endDate" data-ng-disabled="eventData.withoutDates" type="text" class="form-control input-round-borders calendar-input" datepicker-popup="dd.MM.yyyy" ng-model="eventData.endDate" is-open="datepicker.endDate.isOpened" min-date="eventData.startDate" datepicker-options="datepicker.options" date-disabled="disabled(date, mode)" close-text="Close" ng-click="openDatepicker($event, 'endDate')" required/>
+								<input id="endDate" data-ng-disabled="event.withoutDates" type="text" class="form-control input-round-borders calendar-input" datepicker-popup="dd.MM.yyyy" ng-model="event.days.endTime" is-open="datepicker.endDate.isOpened" min-date="event.days.startTime" datepicker-options="datepicker.options" date-disabled="disabled(date, mode)" close-text="Close" ng-click="openDatepicker($event, 'endDate')" required/>
 							</div>
 						</div>
 					</div>
 					<div class="column-wrapper col-xs-6 col-sm-4">
 						<div class="form-group">
 							<label for="notes">Notes</label>
-							<textarea id="notes" class="form-control" data-ng-model="eventData.notes"></textarea>
+							<textarea id="notes" class="form-control" data-ng-model="event.notes"></textarea>
 						</div>
 					</div>
 				</div>
 				<div class=" pull-right">
 					<button class="btn btn-white" data-ng-click="closeEventForm()">Close</button>
-					<button class="btn btn-white" data-ng-click="createEvent()">Save Changes</button>
+					<button class="btn btn-white" data-ng-click="updateEvent()">Save Changes</button>
+					<button class="btn btn-white" data-ng-click="deleteEvent()">Delete Event</button>
 				</div>
 			</fieldset>
 		</form>
